--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -254,9 +254,9 @@ else
 
         <table class="pure-table" id="dependencies-table">
             <tr>
-                <th>Name</th>
-                <th>Version In Use</th>
-                <th>Date Updated</th>
+                <th>@Resources.Account_Create_Name</th>
+                <th>@Resources.Dependencies_VersionInUse</th>
+                <th>@Resources.Dependencies_DateUpdated</th>
             </tr>
             @for (int i = 0; i < Model.Dependencies.Count; i++)
             {
