--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -213,9 +213,9 @@ else
                     <th class="pure-control-group">
                         <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text"></div>
                         <span class="field-validation-valid" data-valmsg-for="Dependencies[{i}].KnownDependency.ComponentName" data-valmsg-replace="true"></span>
-                        <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)" style="width: 206.944px" aria-required="true" aria-invalid="false">
+                        <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" style="width: 206.944px" aria-required="true" aria-invalid="false">
                             @{
-                                var itemsTemplate = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
+                                var itemsTemplate = (IEnumerable<SelectListItem>)Model.KnownDependencies;
                                 if (itemsTemplate != null)
                                 {
                                     <option></option>
@@ -230,7 +230,7 @@ else
                     <th class="pure-control-group" id="newKD-Dependencies_{i}__KnownDependenciesId" style="display: none;">
                         <label class="pure-form-aligned pure-control-group"></label>
                         <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
-                        <button type="button" id="{i}" onclick="checkIfKDExists(this.id)" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
+                        <button type="button" id="{i}" @*onclick="checkIfKDExists(this.id)"*@ title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
                     </th>
                     <th class="col pure-control-group">
                         <input class="form-control" id="Dependencies_{i}__.VersionInUse" name="Dependencies[{i}].VersionInUse" />
@@ -265,7 +265,8 @@ else
                         <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName)</div>
                         @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
                         @{
-                            var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
+                            var items = (IEnumerable<SelectListItem>)Model.KnownDependencies;
+                            
                             for (int j = 0; j < items.Count(); j++)
                             {
                                 if (items.ToList()[j].Value == Model.Dependencies[i].KnownDependency.Id.ToString())
@@ -277,13 +278,16 @@ else
                                     items.ToList()[j].Selected = false;
                                 }
                             }
+                            
                             @Html.DropDownListFor(m => m.Dependencies[i].KnownDependenciesId, items, new
                        {
                            @class = "dropDownKD",
                            @disabled = "disabled",
                            @style = "width: 206.944px; color: #6B6B6B;",
-                           @onChange = "javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)"
+                           @onChange = "javascript: DisplayComponentNameNewInputField(this.id)",
+                           @onLoad = "javascript: setKDDropDownSelectedValue(this.id)"
                        });
+                            @*<img onload="setKDDropDownSelectedValue(@i)" style="display: none;">*@
                             var DepenId = Model.Dependencies[i].Id;
                         }
                     <td class="pure-control-group" id="@($"newKD-Dependencies_{i}__KnownDependenciesId")" style="display:none;">
@@ -338,67 +342,142 @@ else
 <script src="~/scripts/ServiceAccountsEdit.js"></script>
 <script src="~/scripts/DependenciesEdit.js"></script>
 <script>
-function DisplayComponentNameNewInputField(text, index) {
-    if (text == "Add New...") {
-        $("#newKD-" + index).css("display", "inline-block");
-    } else {
-        $("#newKD-" + index).css("display", "none");
+    //function lookForAddNewKD() {
+    //    i = 0;
+    //    $(".dropDownKD").each(function () {
+    //        //console.log(this.id);
+    //        //console.log(currentID);
+    //        if (this.value == "-1") {
+    //            var dropdown = this;
+    //            var newKDName = document.getElementById("KDInput" + this.id).value;
+    //            console.log(this);
+    //            console.log(i);
+    //            // add to list of compnames, then current drop down set the values to disabled if they're in the array
+    //        }
+    //        i++;
+    //    })
+    //}
+    //window.onload = function () {
+    //    $(".dropDownKD").each(function () {
+    //        var index = this.id;
+    //        if (this.value == "Add New...") {
+    //            $("#newKD-" + index).css("display", "inline-block");
+    //        } else {
+    //            $("#newKD-" + index).css("display", "none");
+    //        }
+    //    })
+    //}
+
+    function setKDDropDownSelectedValue(i) {
+        console.log(i);
     }
-}
-function checkIfKDExists(i) {
-    var inputTemplate = document.getElementById("KDInputDependencies_" + i + "__KnownDependenciesId");
-    var newKDName = inputTemplate.value;
-    var dropDown = document.getElementById(`Dependencies_${i}__KnownDependenciesId`);
-    var exists = 0;
-    for (j = 0; j < dropDown.options.length; j++) {
-        if (newKDName == dropDown.options[j].text) {
-            exists = 1;
-            break;
+
+    function DisplayComponentNameNewInputField(dropDownID) {
+        inputField = document.getElementById("KDInput" + dropDownID);
+        console.log("KDInput" + dropDownID);
+        console.log("KDInputDependencies_2__KnownDependenciesId");
+        dropDown = document.getElementById(dropDownID);
+        selectedValue = dropDown[dropDown.selectedIndex].text;
+        if (selectedValue == "Add New...") {
+            $("#newKD-" + dropDownID).css("display", "inline-block");
+            changeNameOfInput(inputField, dropDown, 1);
+        } else {
+            $("#newKD-" + dropDownID).css("display", "none");
+            changeNameOfInput(inputField, dropDown, 0);
         }
     }
-    if (newKDName == "") {
-        alert("The new component name cannot be blank");
-    } else if (exists == 1) {
-        alert("The component name entered already exists");
-    } else {
-        addKDtoDropDown(i, newKDName, dropDown);
+
+    function checkIfKDExists(inputID) {
+        var inputField = document.getElementById(inputID);
+        var newKDName = inputField.value;
+        var dropDown = document.getElementById(inputID.slice(7));
+        var exists = 0;
+        for (j = 0; j < dropDown.options.length; j++) {
+            if (newKDName == dropDown.options[j].text) {
+                exists = 1;
+                break;
+            }
+        }
+        if (newKDName == "") {
+            //alert("The new component name cannot be blank");
+        } else if (exists == 1) {
+            alert("The component name entered already exists");
+        } else {
+            //changeNameOfInput(inputField, dropDown, 1);
+            //addKDtoDropDown(i, newKDName, dropDown);
+        }
     }
-}
+
+    function changeNameOfInput(inputField, dropDown, addNewSelected) {          // tomorrow start working on backend stuff, first how to prevent the default if model state is not valid stuff so that I can then actually test the other stuff in the backend
+        if (addNewSelected) {
+            console.log(inputField);
+            inputField.setAttribute("name", dropDown.name);
+            dropDown.setAttribute("name", "");
+        } else if (dropDown.name == "") {
+            dropDown.setAttribute("name", inputField.name);
+            inputField.setAttribute("name", "");
+        }
+    }
+
+    //old check if kd exists, just based on i
+    //function checkIfKDExists(i) {
+    //    console.log("within checkifkdexists");
+    //    var inputTemplate = document.getElementById("KDInputDependencies_" + i + "__KnownDependenciesId");
+    //    var newKDName = inputTemplate.value;
+    //    var dropDown = document.getElementById(`Dependencies_${i}__KnownDependenciesId`);
+    //    var exists = 0;
+    //    for (j = 0; j < dropDown.options.length; j++) {
+    //        if (newKDName == dropDown.options[j].text) {
+    //            exists = 1;
+    //            break;
+    //        }
+    //    }
+    //    if (newKDName == "") {
+    //        alert("The new component name cannot be blank");
+    //    } else if (exists == 1) {
+    //        alert("The component name entered already exists");
+    //    } else {
+    //        changeNameOfInput(inputTemplate, dropDown);
+    //        //addKDtoDropDown(i, newKDName, dropDown);
+    //    }
+    //}
+
     function addKDtoDropDown(i, newKDName, dropDown) {
-    //Ajax call to the controller to add knowndependencies 
-    $.ajax({
-        type: "GET",
-        contentType: "application/json; charset=utf-8",
-        url: `@Url.Action("GenerateNewGuid", "Repository")`,
-        data: { "componentName": newKDName },
-        success: function (response) {
-            //adding new option to list
-            var option = document.createElement("option");
-            option.text = newKDName;
-            option.value = response;
-            option.selected = true;
-            dropDown.add(option);
-            //console.log("test: " + $(`#Dependencies_${i}__KnownDependenciesId option[value=${response}]`));
-            //$(`#Dependencies_${i}__KnownDependenciesId option[value=${response}]`).css("display", "none");
-            //adding add new to the bottom of the option list by removing it and adding it again
-            $(`#KDInputDependencies_${i}__KnownDependenciesId`).val("");
-            $(`#newKD-Dependencies_${i}__KnownDependenciesId`).css("display", "none");
-            $(`#Dependencies_${i}__KnownDependenciesId option[value='-1']`).remove();
 
-            var option2 = document.createElement("option");
-            option2.text = "Add New...";
-            option2.remove();
-            option2.value = "-1";
-            option2.selected = false;
-            dropDown.add(option2);
+        //Ajax call to the controller to add knowndependencies 
+        $.ajax({
+            type: "GET",
+            contentType: "application/json; charset=utf-8",
+            url: `@Url.Action("GenerateNewGuid", "Repository")`,
+            data: { "componentName": newKDName },
+            success: function (response) {
+                //adding new option to list
+                var option = document.createElement("option");
+                option.text = newKDName;
+                option.value = response;
+                option.selected = true;
+                dropDown.add(option);
+                //console.log("test: " + $(`#Dependencies_${i}__KnownDependenciesId option[value=${response}]`));
+                //$(`#Dependencies_${i}__KnownDependenciesId option[value=${response}]`).css("display", "none");
+                //adding add new to the bottom of the option list by removing it and adding it again
+                $(`#KDInputDependencies_${i}__KnownDependenciesId`).val("");
+                $(`#newKD-Dependencies_${i}__KnownDependenciesId`).css("display", "none");
+                $(`#Dependencies_${i}__KnownDependenciesId option[value='-1']`).remove();
 
-        },
-        failure: function (response) {
-            alert("Failed to add new component name");
-        }
-    });
-    return false;
-}
+                var option2 = document.createElement("option");
+                option2.text = "Add New...";
+                option2.remove();
+                option2.value = "-1";
+                option2.selected = false;
+                dropDown.add(option2);
+
+            },
+            failure: function (response) {
+                alert("Failed to add new component name");
+            }
+        });
+        return false;
+    }
 </script>
 
 
