--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -91,9 +91,9 @@ else
             @Html.CheckBoxFor(m => m.LinksUseGlobal, new
        {
            @onClick = "document.getElementById('LinksRegex').disabled = this.checked; " +
-    "document.getElementById('LinksUrl').disabled =  this.checked; " +
-    "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': ''; " +
-    "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': '';"
+ "document.getElementById('LinksUrl').disabled =  this.checked; " +
+ "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': ''; " +
+ "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': '';"
        })
         </div>
         <div class="pure-control-group">
@@ -113,7 +113,7 @@ else
             @Html.TextBoxFor(m => m.LinksUrl, attribs)
             <i class="fa fa-info-circle" title="@Resources.Settings_Global_LinksUrl_Hint"></i>
         </div>
-    }
+                }
 
     <div class="pure-control-group checkboxlist">
         @Html.LabelFor(m => m.Users)
@@ -192,9 +192,9 @@ else
                 @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
             </th>
         </tr>
-    }
+                    }
 </table>
-        }
+                    }
 
     </fieldset>
 
@@ -218,25 +218,30 @@ else
                         <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" style="width: 250px" aria-required="true" aria-invalid="false">
                             @{
                                 var itemsTemplate = (IEnumerable<SelectListItem>)Model.KnownDependencies;
+                                var dependencies = Model.Dependencies; //existing KD in repo
                                 if (itemsTemplate != null)
                                 {
                                     <option></option>
-                                    foreach (var kd in itemsTemplate) //To keep similar style, use this way and not for(); There is an easy way to optimize O(1) hash-set
+                                    //display first empty
+                                    //create a dict using the var depen.
+                                    Dictionary<string, string> DependenciesDictionary = new Dictionary<string, string>();
+                                    foreach (var Dependency in Model.Dependencies) //existing repo
                                     {
-                                        foreach (var dependencies in Model.Dependencies) //Do a look up table
+                                        DependenciesDictionary.Add(Dependency.KnownDependenciesId.ToString(), Dependency.KnownDependenciesId.ToString());
+                                    }
+                                    foreach (var kd in itemsTemplate) //all pre-existing
+                                    {
+                                        if (DependenciesDictionary.ContainsKey(kd.Value))
                                         {
-                                            if (dependencies.KnownDependenciesId.ToString() != kd.Value)
-                                            {
-                                                <option value="@kd.Value">@kd.Text</option>
-                                            }
-                                            else
-                                            {
-                                                <option disabled value="@kd.Value">@kd.Text</option>
-                                                }
-                                            }
+                                            <option disabled value="@kd.Value"> @kd.Text</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@kd.Value"> @kd.Text</option>
                                         }
                                     }
                                 }
+                            }
                         </select>
                     </th>
                     <th class="pure-control-group" id="newKD-Dependencies_{i}__KnownDependenciesId" style="display: none;">
