--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -130,15 +130,14 @@
                     <th class="pure-control-group">
                         <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text" style = "width: 250px;"></div>
                         <span class="field-validation-valid" data-valmsg-for="Dependencies[{i}].KnownDependency.ComponentName" data-valmsg-replace="true"></span>
-                        <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text, this.id)" style="width: 250px" aria-required="true" aria-invalid="false">
+                        <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" style="width: 250px" aria-required="true" aria-invalid="false">
                             @{
-                                var itemsTemplate = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
-                                if (itemsTemplate != null)
+                                if (Model.KnownDependencies != null)
                                 {
                                     <option></option>
-                                    foreach (var kd in itemsTemplate)
+                                    foreach (var knownDependency in Model.KnownDependencies)
                                     {
-                                        <option value="@kd.Value">@kd.Text</option>
+                                        <option value="@knownDependency.Id.ToString()">@knownDependency.ComponentName</option>
                                     }
                                 }
                             }
@@ -147,7 +146,6 @@
                     <th class="pure-control-group" id="newKD-Dependencies_{i}__KnownDependenciesId" style="display: none;">
                         <label class="pure-form-aligned pure-control-group"></label>
                         <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
-                        <button type="button" id="{i}" onclick="checkIfKDExists(this.id)" title="Add Component Name" style="background-color: white; border: none;"><i style="color:green;" class="fa fa-plus-circle"></i></button>
                     </th>
                     <th class="col pure-control-group">
                         <input class="form-control" id="Dependencies_{i}__.VersionInUse" name="Dependencies[{i}].VersionInUse" />
@@ -182,65 +180,60 @@
 <script src="~/scripts/ServiceAccountsEdit.js" asp-append-version="true"></script>
 <script src="~/scripts/DependenciesEdit.js" asp-append-version="true"></script>
 <script>
-function DisplayComponentNameNewInputField(text, index) {
-    if (text == "Add New...") {
-        $("#newKD-" + index).css("display", "inline-block");
-    } else {
-        $("#newKD-" + index).css("display", "none");
-    }
-}
-function checkIfKDExists(i) {
-    var inputTemplate = document.getElementById("KDInputDependencies_" + i + "__KnownDependenciesId");
-    var newKDName = inputTemplate.value;
-    var dropDown = document.getElementById(`Dependencies_${i}__KnownDependenciesId`);
-    var exists = 0;
-    for (j = 0; j < dropDown.options.length; j++) {
-        if (newKDName == dropDown.options[j].text) {
-            exists = 1;
-            break;
+    function DisplayComponentNameNewInputField(dropDownID) {
+        inputField = document.getElementById("KDInput" + dropDownID);
+        console.log("KDInput" + dropDownID);
+        console.log("KDInputDependencies_2__KnownDependenciesId");
+        dropDown = document.getElementById(dropDownID);
+        selectedValue = dropDown[dropDown.selectedIndex].text;
+        if (selectedValue == "Add New...") {
+            $("#newKD-" + dropDownID).css("display", "inline-block");
+            changeNameOfInput(inputField, dropDown, 1);
+        } else {
+            $("#newKD-" + dropDownID).css("display", "none");
+            changeNameOfInput(inputField, dropDown, 0);
         }
     }
-    if (newKDName == "") {
-        alert("Please input a value, the new component name cannot be blank");
-    } else if (exists == 1) {
-        alert("The component name entered already exists");
-    } else {
-        addKDtoDropDown(i, newKDName, dropDown);
-    }
-}
-function addKDtoDropDown(i, newKDName, dropDown) {
-    //Ajax call to the controller to add knowndependencies
-    $.ajax({
-        type: "GET",
-        contentType: "application/json; charset=utf-8",
-        url: `@Url.Action("GenerateNewGuid", "Repository")`,
-        data: { "componentName": newKDName },
-        success: function (response) {
-            //adding new option to list
-            var option = document.createElement("option");
-            option.text = newKDName;
-            option.value = response;
-            option.selected = true;
-            dropDown.add(option);
-            //console.log("test: " + $(`#Dependencies_${i}__KnownDependenciesId option[value=${response}]`));
-            //$(`#Dependencies_${i}__KnownDependenciesId option[value=${response}]`).css("display", "none");
-            //adding add new to the bottom of the option list by removing it and adding it again
-            $(`#KDInputDependencies_${i}__KnownDependenciesId`).val("");
-            $(`#newKD-Dependencies_${i}__KnownDependenciesId`).css("display", "none");
-            $(`#Dependencies_${i}__KnownDependenciesId option[value='-1']`).remove();
-            var option2 = document.createElement("option");
-            option2.text = "Add New...";
-            option2.remove();
-            option2.value = "-1";
-            option2.selected = false;
-            dropDown.add(option2);
 
-        },
-        failure: function (response) {
-            alert("Failed to add new component name");
+    function checkIfKDExists(inputID) {
+        var inputField = document.getElementById(inputID);
+        var newKDName = inputField.value;
+        var dropDown = document.getElementById(inputID.slice(7));
+        var exists = 0;
+        for (j = 0; j < dropDown.options.length; j++) {
+            if (newKDName == dropDown.options[j].text) {
+                exists = 1;
+                break;
+            }
         }
-    });
-    return false;
-}
+        if (newKDName == "") {
+            //alert("The new component name cannot be blank");
+        } else if (exists == 1) {
+            //if (window.confirm("the component name entered already exists")) {
+            //    document.getElementById(inputID).focus();
+            //} else {
+            //    document.getElementById(inputID).focus();
+            //}
+            //window.confirm("the component name entered already exists");
+            alert("the component name entered already exists");
+            //if (!alert("the component name entered already exists")) {
+            //    document.getElementById(inputID).focus();
+            //}
+        } else {
+            //changeNameOfInput(inputField, dropDown, 1);
+            //addKDtoDropDown(i, newKDName, dropDown);
+        }
+    }
+
+    function changeNameOfInput(inputField, dropDown, addNewSelected) {          // tomorrow start working on backend stuff, first how to prevent the default if model state is not valid stuff so that I can then actually test the other stuff in the backend
+        if (addNewSelected) {
+            console.log(inputField);
+            inputField.setAttribute("name", dropDown.name);
+            dropDown.setAttribute("name", "");
+        } else if (dropDown.name == "") {
+            dropDown.setAttribute("name", inputField.name);
+            inputField.setAttribute("name", "");
+        }
+    }
 </script>
 }
